--- a/services/Serviços.html
+++ b/services/Serviços.html
@@ -31,16 +31,16 @@
                         <a class="nav-link" href="../index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Saiba mais</a>
+                        <a class="nav-link" href="Serviços.html">Saiba mais</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nossa equipe</a>
+                        <a class="nav-link" href="">Nossa equipe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../form/index.html">Cadastro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Login</a>
+                        <a class="nav-link active" aria-current="page" href="../login/index.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
                 <p>❌ Material de apoio </p>
                 <p>❌ Cursos básico</p>
                 <p>❌ Cursos avaçados</p>
-                <button class="btn1"><a class="assinatura" href="">Assinar</a></button>
+                <button class="btn1"><a class="assinatura" href="../form/index.html">Assinar</a></button>
             </div>
             <div class="plano1" id="plano1botom"></div>
         </div>
@@ -72,7 +72,7 @@
                 <p>✔️ Material de apoio </p>
                 <p>❌ Cursos básico</p>
                 <p>❌ Cursos avaçados</p>
-                <button class="btn2"><a class="assinatura" href="">Assinar</a></button>
+                <button class="btn2"><a class="assinatura" href="../form/index.html">Assinar</a></button>
             </div>
             <div class="plano2" id="plano2botom"></div>
         </div>
@@ -85,7 +85,7 @@
                 <p>✔️ Material de apoio </p>
                 <p>✔️ Cursos básico</p>
                 <p>❌ Cursos avaçados</p>
-                <button class="btn3"> <a class="assinatura" href="">Assinar</a></button>
+                <button class="btn3"> <a class="assinatura" href="../form/index.html">Assinar</a></button>
             </div>
             <div class="plano3" id="plano3botom"></div>
         </div>
@@ -99,7 +99,7 @@
                 <p>✔️ Material de apoio </p>
                 <p>✔️ Cursos básico</p>
                 <p>✔️ Cursos avaçados</p>
-                <button class="btn4"><a class="assinatura" href="">Assinar</a></button>
+                <button class="btn4"><a class="assinatura" href="../form/index.html">Assinar</a></button>
             </div>
             <div class="plano4" id="plano4botom"></div>
         </div>
