--- a/login/index.html
+++ b/login/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link"  href="../index.html">Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Saiba mais</a>
+            <a class="nav-link" href="../services/Serviços.html">Saiba mais</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Nossa equipe</a>
